<resources>
    <string name="app_name">My Clinic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App Logo</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="code">Code</string>
    <string name="confirm">Confirm</string>
    <string name="choose_insurance_company">Choose Insurance Company</string>
    <string name="insurance_number">Insurance Number</string>
    <string name="skip">Skip</string>
    <string name="menu_item_image">Menu Item Image</string>
    <string name="cities">Cities</string>
    <string name="hospitals">Hospitals</string>
    <string name="external">External</string>
    <string name="labs">Labs</string>
    <string name="x_ray">X-Ray</string>
    <string name="naturalist">Naturalist</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="major">Major</string>
    <string name="doctors">Doctors</string>
    <string name="reserve">Reserve</string>
    <string name="tests">Tests</string>
    <string name="required_tests">Required Tests</string>
    <string name="time_available">Time Available</string>
    <string name="operations">Operations</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="search">Search...</string>
    <string name="doctor_image">Doctor Image</string>
    <string name="backgroundImage">background image</string>
    <string name="qualifications">Qualifications</string>
    <string name="lineImage" translatable="false">line image</string>
    <string name="reserve_an_appointment">Reserve an appointment</string>
    <string name="ads_banner" translatable="false">Ads Banner</string>
    <string name="medical">Medical</string>
    <string name="ad_banner" translatable="false">Ad banner</string>
    <string name="district">District</string>
    <string name="ricotta_image">ricotta image</string>
    <string name="select_ricotta_image">Select Ricotta Image</string>
    <string name="medicine_available">Medicine Available</string>
    <string name="browse_image">Browse Image</string>
    <string name="order">Order</string>
    <string name="consult_general_doctor">Consult General Doctor</string>
    <string name="request_a_doctor">Request a Doctor</string>
    <string name="request_a_nurse">Request a Nurse</string>
    <string name="heat_temperature">Heat temperature</string>
    <string name="consult">Consult</string>
    <string name="new_appointment">New Appointment</string>
    <string name="in_progress">In Progress</string>
    <string name="history">History</string>
    <string name="result">Result</string>
    <string name="lorem40">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cum debitis delectus eaque excepturi facere harum incidunt inventore ipsa ipsum, itaque molestiae mollitia neque odit pariatur placeat provident quasi recusandae veniam voluptates. Aspernatur doloribus eius, laboriosam laudantium provident quos reprehenderit.</string>
    <string name="lorem80">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cum debitis delectus eaque excepturi facere harum incidunt inventore ipsa ipsum, itaque molestiae mollitia neque odit pariatur placeat provident quasi recusandae veniam voluptates. Aspernatur doloribus eius, laboriosam laudantium provident quos reprehenderit.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cum debitis delectus eaque excepturi facere harum incidunt inventore ipsa ipsum, itaque molestiae mollitia neque odit pariatur placeat provident quasi recusandae veniam voluptates. Aspernatur doloribus eius, laboriosam laudantium provident quos reprehenderit
    </string>
    <string name="medicine">Medicine</string>
    <string name="select_location">Select Location</string>
    <string name="select_pharmacy">Select Pharmacy</string>
    <string name="delivery_option">Delivery Option</string>
    <string name="request_medicine">Request Medicine</string>
    <string name="select_city">Select City</string>
    <string name="select_district">Select District</string>
    <string name="select_doctor_major">Select Doctor Major</string>
    <string name="request">Request</string>
    <string name="it_s_best_to_cancel_an_appointment_before_1_hour_at_least">*** It’s best to cancel an appointment before 1 hour at least</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="appointment_duration">Appointment Duration</string>
    <string name="current_appointments">Current Appointments</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="my_appointments">My Appointments</string>
    <string name="back">Back</string>
    <string name="period">Period</string>
    <string name="day_time">Day Time</string>
    <string name="night_time">Night Time</string>
    <string name="id_number">ID Number</string>
    <string name="language">Language</string>
    <string name="default_notification_channel_id" translatable="false">chaneeeel</string>
    <string name="fcm_message">title</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="offers">Offers</string>
    <string name="nickname">Nickname</string>
    <string name="city">City</string>
    <string name="bio">Bio</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string-array name="testsarray">
        <item>Eye Test</item>
        <item>COVID Test</item>
        <item>Blood Pressure</item>
    </string-array>
    <string-array name="sympotoms">
        <item>High blood pressure</item>
    </string-array>
    <string-array name="medicineav">
        <item>Panadol Night</item>
    </string-array>
    <string-array name="xrays">
        <item>Chest Image</item>
        <item>Brain Scan</item>
    </string-array>
</resources>