<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~
  ~ Copyright RectiCode(c) 2020.
  ~ All Rights Reserved
  ~
  ~ This product is protected by copyright and distributed under
  ~ licenses restricting copying, distribution and de-compilation.
  ~
  ~ Created by Ali Mohammad
  ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.aligmohammad.doctorapp.ui.dialogs.OnDialogInteract" />

        <variable
            name="viewModel"
            type="com.aligmohammad.doctorapp.ui.dialogs.appointmentmanagment.AppointmentManagmentBottomSheetViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.dialogs.appointmentmanagment.AppointmentManagementBottomSheetFragment">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/backButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:background="@drawable/back_black_icon"
                android:gravity="center_vertical"
                android:onClick="@{listener::onBackButtonClicked}" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="@string/my_appointments"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/addAppointment"
            style="@style/Theme.DoctorApp.Button"
            android:text="@string/add_appointment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <Button
            android:id="@+id/cancelAppointment"
            style="@style/Theme.DoctorApp.Button"
            android:text="@string/cancel_appointment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addAppointment" />

        <Button
            android:id="@+id/currentAppointment"
            style="@style/Theme.DoctorApp.Button"
            android:text="@string/current_appointments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cancelAppointment" />

        <Button
            android:id="@+id/appointmentDuration"
            style="@style/Theme.DoctorApp.Button"
            android:layout_marginBottom="15dp"
            android:text="@string/appointment_duration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentAppointment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>