<?xml version="1.0" encoding="utf-8"?><!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~
  ~ Copyright RectiCode(c) 2020.
  ~ All Rights Reserved
  ~
  ~ This product is protected by copyright and distributed under
  ~ licenses restricting copying, distribution and de-compilation.
  ~
  ~ Created by Ali Mohammad
  ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.aligmohammad.doctorapp.ui.fragments.insurancefragment.InsuranceViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context=".ui.fragments.insurancefragment.InsuranceFragment">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/insuranceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/insuranceCompanySpinner"
            android:text="@string/choose_insurance_company"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <Spinner
            android:id="@+id/insuranceCompanySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinner"
            android:padding="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insuranceTextView" />

        <TextView
            android:id="@+id/insuranceNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/insuranceNumberEditText"
            android:text="@string/insurance_number"
            app:layout_constraintTop_toBottomOf="@id/insuranceCompanySpinner" />

        <EditText
            android:id="@+id/insuranceNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insuranceNumberTextView" />

        <Button
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/secondary"
            android:minWidth="200dp"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insuranceNumberEditText" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:onClick="@{viewModel::onConfirmClicked}"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/skipButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>